tests/compiler_errors/const_redef_fn.tlp
fn foo do end
const foo 1 end 